<resources>
    <string name="app_name" translatable="false">Gary</string>
    <string name="register">Register</string>
    <string name="service_agreement">I agree to the terms of service</string>
    <string name="sign_up">Sign up</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="email_hint" translatable="false">E-mail</string>
    <string name="password_hint">Password</string>
    <string name="birthday_hint">Your birth date</string>
    <string name="register_hint">I agree to the terms and conditions of service</string>
    <string name="register_button_text">Create account</string>
    <string name="log_in">Log in</string>
    <string name="log_out">Log out</string>
    <string name="login_button_text">Log in</string>
    <string name="send">Send</string>
    <string name="forgot_password">Forgot password</string>
    <string name="forgot_passwordq">Forgot password?</string>
    <string name="guest_text">Don\'t want to create an account?</string>
    <string name="guest_button">Click here</string>
    <string name="guest_appbar_text">Guest View</string>
    <string name="user_appbar_text">User View</string>
    <string name="create_incident_text">Create Incident</string>
    <string name="type_of_incident">Type</string>
    <string name="incident_localisation">Localisation</string>
    <string name="incident_description">Description</string>
    <string name="incident_add_button">Add</string>
    <string name="incident_cancel_button">Cancel</string>
    <string name="incident_type_hint">Select type</string>
    <string name="incident_address_hint">Address</string>
    <string name="incident_details_text">Incident details</string>
    <string name="call_for_support_text">Call for support</string>
    <string name="paramedic_type">Type of support</string>
    <string name="paramedic_justification">Justification</string>
    <string name="paramedic_justi_hint">Enter justification</string>
    <string name="paramedic_call_button_ambulance">Ambulance</string>
    <string name="paramedic_call_button_fireStation">Fire truck</string>
    <string name="paramedic_call_button_police">Police</string>
    <string name="Paramedic_screen">Paramedic View</string>
    <string name="ParamedicScreen_FinishShift">Finish Shift</string>
    <string name="ParamedicScreen_CheckIn">Check In</string>
    <string name="GuestNavigation_Map">Map</string>
    <string name="ParamedicNavigation_Map">Map</string>
    <string name="ParamedicNavigation_LogOut">Log out</string>
    <string name="UserNavigation_Tutorials">Tutorials</string>
    <string name="UserNavigation_UserDetails">User Details</string>
    <string name="UserNavigation_ReportedIncidents">Reported Incidents</string>
    <string name="UserNavigation_Map">Map</string>
    <string name="UserNavigation_LogOut">Log out</string>
    <string name="incident_scan">Scan</string>
    <string name="scan_prompt">Scan victims band code</string>
    <string name="choose_your_location">Tap to choose incident location</string>
    <string name="add_victim_info">Add victim info</string>
    <string name="victims_condition">Victim\'s condition</string>
    <string name="select">Select</string>
    <string name="choose">Choose</string>
    <string name="confirm">Confirm</string>
    <string name="add">Add information</string>
    <string name="yes">Yes</string>
    <string name="startBreak">Start Break</string>
    <string name="no">No</string>
    <string name="call">Call</string>
    <string name="victim_description">Additional description</string>
    <string name="allergy">Allergy</string>
    <string name="allergy_type">Allergy Type</string>
    <string name="allergy_name">Allergy Name</string>
    <string name="allergy_additional_info">Additional Info</string>
    <string name="blood_type_question">What is your blood type:</string>
    <string name="check_equipment">Check equipment</string>
    <string name="disease_label">Disease</string>
    <string name="disease_name">Disease name</string>
    <string name="unconscious_victim">Unconscious victim</string>
    <string name="victim_description_field">Describe what happened on site</string>
    <string name="victim_band_code">Victim band code</string>
    <string name="paramedic_login_button">Paramedic</string>
    <string name="allergy_type_info">Type</string>
    <string name="ambulance_shifts">Ambulance shifts</string>
    <string name="day_label">Day:</string>
    <string name="check_in_button">Check In</string>
    <string name="victim_button">Victim</string>
    <string name="menu_victim">Victim</string>
    <string name="menu_support">Support</string>
    <string name="menu_equipment">Equipment</string>
    <string name="ambulance_break">Break</string>
    <string name="break_type">Break type</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="info_about_this_screen">Info about this screen</string>
    <string name="victims_amount">Victims amount</string>
    <string name="how_many_victims_needs_medical_support">How many victims needs medical support?</string>
    <string name="not_breathing_victim">Not breathing victim</string>
    <string name="band">Band code</string>
    <string name="equipment_button">equipment</string>
    <string name="want_to_know_why_do_we_need_this_data">Want to know why do we need this data?</string>
    <string name="edit_account">Edit Account</string>
    <string name="user_avatar">User Avatar</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="save">Save</string>
    <string name="username">Username</string>
    <string name="placeholder" translatable="false">Placeholder</string>
    <string name="title">Title</string>
    <string name="short_description">Short description</string>
    <string name="get_help_everywhere_you_go">Get help everywhere you go</string>
    <string name="you_can_easily_report_various_incidents_and_get_help_from_medical_professionals">You can easily report various incidents and get help from medical professionals</string>
    <string name="learn_how_to_properly_perform_cpr">Learn how to properly perform CPR</string>
    <string name="our_tutorials_will_quickly_teach_you_basic_medical_skill_you_need_in_critical_situations">Our tutorials will quickly teach you basic medical skill you need in critical situations</string>
    <string name="see_nearby_emergency_services_facilities_near_you">See nearby emergency services facilities near you</string>
    <string name="interactive_map_will_show_you_nearby_hospitals_police_stations_and_fire_departments">Interactive map will show you nearby hospitals, police stations and fire departments</string>
    <string name="go_to_app">Go to app</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="select_language">Select language</string>
    <string name="notifications">Notifications</string>
    <string name="create_incident">Turn off creating incidents</string>
    <string name="barcode_scanning_cancelled">Cancelled</string>
    <string name="barcode_scanning_successful">Scanned band code: </string>
    <string name="create_incident_popup_title">Create Incident?</string>
    <string name="create_incident_popup_alert">Unjustified ambulance call may result in a fine. Are you sure?</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="login_toast">Email logged: </string>
    <string name="UserNavigation_Settings">Settings</string>
    <string name="new_password_confirm">Confirm new password</string>
    <string name="paramedic_day_label">Day:</string>
    <string name="paramedic_ambulance_shift_label">Ambulance shifts</string>
    <string-array name="filterTutorialsArray">
        <item>All Tutorials</item>
        <item>General</item>
        <item>In case of death emergency</item>
        <item>Course</item>
    </string-array>
    <string-array name="medicalInfoArray">
        <item name="Blood Type">Blood Type</item>
        <item name="Allergy">Allergy</item>
        <item name="Disease">Disease</item>
        <item name="TrustedPerson">Trusted Person</item>
    </string-array>
    <string-array name="allergyTypes">
        <item>Skin contact</item>
        <item>Ingestion</item>
        <item>Injection/Venom</item>
        <item>Inhalation</item>
    </string-array>
    <string-array name="incidentTypes">
        <item>Car accident</item>
        <item>Flood</item>
        <item>Fire</item>
        <item>Unknown</item>
        <item>Heart attack</item>
        <item>Suicide</item>
        <item>COVID</item>
    </string-array>
    <string-array name="genderTypes">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string-array name="victimStatusTypes">
        <item>Stable</item>
        <item>Unstable</item>
        <item>Deceased</item>
    </string-array>
    <string name="log_in_to_see_tutorial">Log in to read tutorials</string>
    <string name="log_in_to_see_tutorial_message">Tutorials are available only for logged in users</string>
    <string name="about_us">About us</string>
    <string name="disease">Diseases</string>
    <string name="bloodType">Blood type</string>
    <string name="rhType">Rh</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="error_adding_info">There was a problem with your request</string>
    <string name="update">Update</string>
    <string name="isVictimBreathing">Is victim breathing?</string>
    <string name="optional_band_code">Optional victim band code</string>
    <string name="isVictimConscious">Is victim conscious?</string>
    <string name="addedAccidentReport">Accident report created succesfully</string>
    <string name="trusted_person">Trusted Person</string>
    <string name="trusted_person_info">Contact information</string>
    <string name="phonenumber_hint">Phone Number</string>
    <string name="trusted_person_hint">Who should be informed in case of emergency?</string>
    <string name="guest">Guest</string>
    <string name="current_emergency_label">Current emergency assigned to you</string>
    <string name="current_emergency_type">Emergency type:</string>
    <string name="current_emergency_time">Time of incident:</string>
    <string name="current_emergency_address">Address:</string>
    <string name="current_emergency_victims">Victims:</string>
    <string name="current_emergency_victim_state">Victim state:</string>
    <string name="this_is_a_map_of_facilities_near_you">This is a map of facilities near you</string>
    <string name="hospital">Hospital</string>
    <string name="police">Police</string>
    <string name="fire_department">Fire</string>
    <string name="tutorial_category">Tutorial category:</string>
    <string name="description">Description</string>
    <string name="victim_info">Victim info</string>
    <string name="open_navigation">Navigate</string>
    <string name="birthday">Birth date</string>
    <string name="ambulance">Ambulance</string>
    <string name="options">Options</string>
    <string name="breakText">Break Time</string>
    <string name="nearest_shift">Shift:</string>
    <string name="break_explaining_text">When you start a break your ambulance shows up in dispatchers view as \"Currently on break\"</string>
    <string name="end">Finish break</string>
    <string name="currentlyOnBreak">Currently on Break</string>
    <string name="no_backup_type_selected">Please select at least one type of backup</string>
    <string name="cantRateTutorials">You can\'t rate tutorials as guest</string>
    <string name="no_internet">Internet connection not available</string>
    <string name="menu_scan">Scan Bandcode</string>
</resources>