<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/Map"
        android:title="@string/ParamedicNavigation_Map"
        android:enabled="true"
        android:icon="@drawable/ic_map_24"/>
    <item
        android:id="@+id/page_1"
        android:enabled="true"
        android:icon="@drawable/ic_round_emergency_24"
        android:title="@string/menu_victim"/>
    <item
        android:id="@+id/page_2"
        android:enabled="true"
        android:icon="@drawable/ic_ambulance"
        android:title="@string/menu_support"/>
    <item
        android:id="@+id/page_3"
        android:enabled="true"
        android:icon="@drawable/ic_twotone_category_24"
        android:title="@string/menu_equipment"/>

    <item
        android:id="@+id/page_4"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_qr_code_scanner_24"
        android:title="@string/menu_scan"/>
</menu>